# Woo

./: .env  .gitattributes  .gitignore  .vercelignore  .warpignore  AGENTS.md  Bugs-0.4.7.md  CLAUDE.md  LICENSE  README.md  index-mobile.html  index.html  package-lock.json  package.json  vercel.json  vite.config.ts  vite.mobile.config.ts  woo-codesign.cer  woo-codesign.key  woo-root-ca.key  woo-root-ca.pem  woo-root-ca.srl
.codegraph/: daemon.pid  review-findings.json
app/: index.html  package-lock.json  package.json
app-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app-local/: README.md  package-lock.json  package.json  vite.config.ts
app-mobile/: README.md  pubspec.yaml
app-tauri/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
app-tauri/src-tauri/capabilities/: default.json
app-tauri/src-tauri/src/: lib.rs
app-tauri/src-tauri/src/commands/: auth.rs  document.rs  folder.rs  kb.rs  lock.rs  mod.rs  sync.rs  system.rs  version.rs
app-tauri/src-tauri/src/db/: mod.rs
app-tauri/src-tauri/src/services/: auth_service.rs  document_service.rs  embedding_service.rs  folder_service.rs  lock_service.rs  mod.rs  sync_engine.rs  version_service.rs
app-tauri/src-tauri/src/supabase/: mod.rs
backend/: pom.xml
docs/: MEMORY_SYNC.md  ai-application-interview-guide.md  app-desktop-github-release.md  app-desktop-release-guide.md  app-local-github-release.md  app-local-release-guide.md  app-mobile-prompt.md  auth-success.html  index.html  todo-p1p2.md  软件设计文档.md
electron/: preload.cjs
frontend/: vite.config.ts
landing/: index.html  vercel.json
scripts/: generate-android-keystore.mjs  sync-memory.sh
services/: .mvn-settings.xml  pom.xml
src/: App.vue  main.ts  setup.ts  style.css  tauri-env.d.ts  vite-env.d.ts
src-mobile/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: desktop-updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: external_file.rs  mod.rs  system.rs  update.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: auth_service.rs  document_service.rs  kb_service.rs  mod.rs  sync_engine.rs  utils.rs
src-tauri/src/supabase/: mod.rs
(+398 files in other folders)
