[package]
name = "woo-tauri"
version = "0.6.4"
description = "Woo Notes - Tauri v2"
authors = ["stophemo"]
edition = "2021"

[lib]
name = "woo_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "custom-protocol"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
regex = "1"
once_cell = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.22"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
# The updater disables reqwest's default features, so opt back into OS proxy discovery.
reqwest-updater = { package = "reqwest", version = "0.13", default-features = false, features = ["system-proxy"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
